--- a/src/components/PopupWithForm/PopupWithForm.css
+++ b/src/components/PopupWithForm/PopupWithForm.css
@@ -29,12 +29,15 @@
 }
 
 .popup__form {
-  width: 430px;
+  max-width: 900px;
+  min-width: 450px;
   max-height: 457px;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 16px;
   margin-left: 40px;
+  display: flex;
+  flex-direction: column;
 }
 
 .popup__title {
@@ -45,17 +48,7 @@
   line-height: 28px;
   color: #808080;;
   margin: 0;
-  padding: 34px 64px 22px 36px;
-}
-
-.popup__label {
-  font-family: "Roboto", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 15px;
-  color: #2F71E5;
-  margin: 0 36px;
+  padding: 34px 64px 22px 34px;
 }
 
 .popup__input {
@@ -65,28 +58,10 @@
   font-size: 14px;
   line-height: 17px;
   color: #000000;
-  width: 358px;
+  width: 100%;
   border: none;
   border-bottom: 1px solid rgba(0,0,0,.2);
   padding: 0 0 10px;
-  margin: 9px 36px 3px;
-}
-
-.popup__input-error {
-  font-family: "Roboto", "Arial", sans-serif;
-  width: 358px;
-  height: 15px;
-  z-index: 1;
-  font-size: 12px;
-  line-height: 11px;
-  color: red;
-  display: block;
-  margin: 0 auto 5px;
-}
-
-.popup__register-error {
-  text-align: center;
-  margin-bottom: 8px;
 }
 
 .popup__button-save {
@@ -99,7 +74,7 @@
   border-radius: 5px;
   width: 360px;
   height: 64px;
-  margin: 0 36px;
+  margin: 0 auto 34px;
   padding: 0;
   border: none;
   box-shadow: 0 0 0.3vw rgba(0,0,0,0.5);
@@ -118,32 +93,11 @@
 .popup__button-save_active:hover {
   background: #1A398B;
   cursor: pointer;
-  transition: .2s;
+  transition: .5s;
 }
 
 .popup__button-save:active {
   background: #2A65CC;
-}
-
-.popup__text {
-  font-family: "Roboto", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 17px;
-  color: #000000;
-  margin: 16px 36px 28px;
-  text-align: center;
-}
-
-.popup__click {
-  color: #2F71E5;
-}
-
-.popup__click:hover {
-  transition: .2s;
-  color: #347EFF;
-  cursor: pointer;
 }
 
 .popup__button-close {
@@ -192,26 +146,14 @@
     padding: 17px 16px 22px 16px;
   }
 
-  .popup__label {
-    margin: 0 16px;
-  }
-
   .popup__input {
     width: calc(100% - 32px);
     margin: 9px 16px 3px;
   }
 
-  .popup__input-error {
-    width: calc(100% - 32px);
-  }
-
   .popup__button-save {
     margin: 0 16px;
     width: calc(100% - 32px);
-  }
-
-  .popup__text {
-    margin: 16px auto 0;
   }
 
   .popup__button-close {
