--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -32,6 +32,11 @@
   font-weight: normal;
   font-size: 1.1rem;
   color: white;
+  cursor: default;
+}
+
+.table__head-item-sort {
+  cursor: pointer;
 }
 
 .table__body {
