--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -7,7 +7,7 @@
     minmax(150px, 1fr)
     minmax(150px, 1.67fr)
     minmax(150px, 1.67fr)
-    minmax(150px, 1.67fr)
+    minmax(150px, 3.33fr)
     minmax(150px, 1.67fr)
     minmax(150px, 3.33fr)
     minmax(150px, 1.67fr)
@@ -37,6 +37,18 @@
 
 .table__head-item-sort {
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.table__head-item-sort::after {
+  content: '\25BE';
+  color: white;
+}
+
+.table__head-item-sort_active::after {
+  transform: rotate(180deg);
 }
 
 .table__body {
